07 simple routing + adjust namespaces

--- a/.docker/nginx/conf.d/app.conf
+++ b/.docker/nginx/conf.d/app.conf
@@ -17,4 +17,8 @@ server {
         fastcgi_index index.php;
         fastcgi_pass php:9000;
     }
+	
+	location / static {
+		include /etc/nginx/mime.types
+	}
 }
