retro: inheritance, abstract class, interface

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
             "Retro\\Constructor\\": "src/Retro/Constructor",
             "Retro\\Namespaces\\PC\\": "src/Retro/Namespaces/PC",
             "Retro\\Namespaces\\TV\\": "src/Retro/Namespaces/TV",
-            "Retro\\Static\\": "src/Retro/Static"
+            "Retro\\Static\\": "src/Retro/Static",
+            "Retro\\Inheritance\\": "src/Retro/Inheritance"
         }
     },
     "authors": [
