Add mariadb container and dependencies to php

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@
 # on Windows:   $ copy .env.example .env
 
 PHP_VERSION=8.1
+MARIADB_ROOT_PASSWORD=root
+MARIADB_DATABASE=demo
+MARIADB_USER=dbuser
+MARIADB_PASSWORD=payrexx
