Implement features from Learnpath

--- a/.docker/nginx/conf.d/app.conf
+++ b/.docker/nginx/conf.d/app.conf
@@ -18,7 +18,7 @@ server {
         fastcgi_pass php:9000;
     }
 	
-#	location ~ \static {
-#		include /etc/nginx/mime.types
-#	}
+    location ~* static {
+      include /etc/nginx/mime.types;
+    }
 }
