persistent storage with SQL, CRUD

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
             "Retro\\Namespaces\\TV\\": "src/Retro/Namespaces/TV",
             "Retro\\Static\\": "src/Retro/Static",
             "Retro\\Inheritance\\": "src/Retro/Inheritance",
-            "Retro\\Serialization\\": "src/Retro/Serialization"
+            "Retro\\Serialization\\": "src/Retro/Serialization",
+            "Service\\": "src/App/service"
         }
     },
     "authors": [
