db/sql: move queries to UserRepository

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
             "Retro\\Inheritance\\": "src/Retro/Inheritance",
             "Retro\\Serialization\\": "src/Retro/Serialization",
             "Service\\": "src/App/service",
-            "Exception\\": "src/App/Exception"
+            "Exception\\": "src/App/Exception",
+            "Repository\\": "src/App/Repositoy"
         }
     },
     "authors": [
