--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,13 @@
             "App\\": "src/App",
             "Test\\": "src/App/Test",
             "Controller\\": "src/App/Controller",
+            "Service\\": "src/App/service",
             "Retro\\Constructor\\": "src/Retro/Constructor",
             "Retro\\Namespaces\\PC\\": "src/Retro/Namespaces/PC",
             "Retro\\Namespaces\\TV\\": "src/Retro/Namespaces/TV",
             "Retro\\Static\\": "src/Retro/Static",
             "Retro\\Inheritance\\": "src/Retro/Inheritance",
-            "Retro\\Serialization\\": "src/Retro/Serialization",
-            "Service\\": "src/App/service",
-            "Exception\\": "src/App/Exception",
-            "Repository\\": "src/App/Repositoy"
+            "Retro\\Serialization\\": "src/Retro/Serialization"
         }
     },
     "authors": [
@@ -25,7 +23,7 @@
     ],
     "require": {
         "filp/whoops": "^2.14",
-        "twbs/bootstrap": "^5.1",
-        "symfony/routing": "^6.0"
+        "symfony/routing": "^6.0",
+        "robmorgan/phinx": "^0.12.10"
     }
 }
